@@ -1,8 +1,6 @@
 ##parameters=REQUEST=None
-if 'cover' in context.objectIds('ATImage'):
-    return context.cover
-
-for image in context.objectValues('ATImage'):
+for image in context.getFolderContents(contentFilter={
+    'portal_type': 'Image',}, full_objects = True):
     return image
 
 # No image found in context, try to get it from canonical
